# beam

./: .bazelrc  .bazelrc.user.example  .dockerignore  .env.example  .gitignore  AGENTS.md  BUILD.bazel  Cargo.toml  MODULE.bazel  README.md  WORKSPACE.bazel  compose.beam.yaml  compose.dependencies.yaml  compose.yaml  package.json  pnpm-lock.yaml  start-dev.sh  verify-config.sh
.github/actions/install-rust-build-deps/: action.yml
.github/workflows/: ci.yml
beam-api/: .env.example  README.md  bun.lockb  bunfig.toml  drizzle.config.ts  package.json  tsconfig.json
beam-api/scripts/: gen-jwt.ts
beam-api/src/: env.ts  index.ts  logger.ts  swagger.ts
beam-api/src/db/: index.ts
beam-api/src/db/drizzle/: index.ts  schema.ts
beam-api/src/lib/: constants.ts  hash.ts  jwt.ts
beam-api/src/lib/validators/: user.ts
beam-api/src/models/: token.ts  user.ts
beam-api/src/plugins/: auth.ts  logger.ts
beam-api/src/routes/: token.ts
beam-api/src/routes/collection/: index.ts
beam-api/src/routes/user/: index.ts  login.ts  logout.ts  register.ts  session.ts
beam-api/src/users/: index.ts
beam-auth/: .env.example  BUILD.bazel  package.json
beam-auth/scripts/: gen-jwt.ts
beam-auth/src/: swagger.ts
beam-auth/src/db/drizzle/: schema.ts
beam-auth/src/lib/: jwt.ts
beam-auth/src/models/: token.ts
beam-auth/src/routes/user/: logout.ts  session.ts
beam-auth/src/server/: error.rs  mod.rs  routes.rs  routes_tests.rs
beam-docs/: .gitignore  BUILD.bazel  README.md  astro.config.mjs  package.json  tsconfig.json  worker-configuration.d.ts  wrangler.jsonc
beam-docs/src/content/docs/: index.mdx
beam-docs/src/content/docs/development/: caching.md  streaming.md
beam-docs/src/content/docs/guides/: example.md
beam-docs/src/content/docs/reference/: example.md
beam-domain/: BUILD.bazel  Cargo.toml
beam-domain/src/: lib.rs
beam-domain/src/models/: admin_log.rs  file.rs  library.rs  mod.rs  movie.rs  show.rs  stream.rs
beam-domain/src/repositories/: admin_log.rs  file.rs  library.rs  mod.rs  movie.rs  show.rs  stream.rs
beam-domain/src/utils/: format.rs  media.rs  metadata.rs  mod.rs
beam-entity/: BUILD.bazel
beam-index/: .env.example  .gitignore  BUILD.bazel  Cargo.toml  Dockerfile  README.md
beam-index/proto/: BUILD.bazel
beam-index/src/: config.rs  lib.rs  main.rs
beam-index/src/io/: scanner.rs
beam-index/src/repositories/: admin_log.rs  file.rs  library.rs  mod.rs  movie.rs  show.rs  stream.rs
beam-index/src/services/: admin_log.rs  index.rs
beam-index/src/utils/: mod.rs
beam-migration/: BUILD.bazel
beam-stream/: .env.example  .gitignore  BUILD.bazel  Cargo.toml  Containerfile  Dockerfile  README.md
beam-stream/examples/: export_schema.rs  gen_hls.rs  gen_mp4.rs  metadata_extractor.rs
beam-stream/src/: config.rs  docs.rs  lib.rs  logging.rs  main.rs  metadata.rs  state.rs  task.rs  todo.rs  utils.rs
beam-stream/src/entities/: episode.rs  episode_file.rs  files.rs  genre.rs  indexed_file.rs  library.rs  library_movie.rs  library_show.rs  media_stream.rs  mod.rs  movie.rs  movie_entry.rs  movie_file.rs  movie_genre.rs  season.rs  show.rs  show_genre.rs  stream_cache.rs  user.rs
beam-stream/src/graphql/: auth_tests.rs  guard.rs  mod.rs  resolver_tests.rs
beam-stream/src/graphql/schema/: mod.rs
beam-stream/src/graphql/schema/admin/: queries.rs
beam-stream/src/graphql/schema/media/: mod.rs  mutations.rs  queries.rs
beam-stream/src/media/: collection.rs  mod.rs
beam-stream/src/models/: file.rs  mod.rs
beam-stream/src/models/domain/: file.rs  library.rs  mod.rs  movie.rs  show.rs  stream.rs  user.rs
beam-stream/src/models/media/: codec.rs  format.rs  mod.rs  movie.rs  show.rs  stream.rs
beam-stream/src/repositories/: file.rs  library.rs  mod.rs  movie.rs  show.rs  stream.rs  user.rs
beam-stream/src/routes/: auth.rs  graphql.rs  health.rs  media.rs  mod.rs  stream.rs  stream_tests.rs  upload.rs
beam-stream/src/services/: auth.rs  hash.rs  library.rs  library_tests.rs  media_info.rs  metadata.rs  metadata_tests.rs  mod.rs  session_store.rs  transcode.rs  transcode_tests.rs
beam-stream/src/task/: mod.rs  schedule.rs
beam-stream/src/utils/: cache.rs  codec.rs  color.rs  file.rs  format.rs  hash.rs  math.rs  media.rs  metadata.rs  mod.rs
beam-stream/src/utils/stream/: config.rs  hls.rs  mod.rs  mp4.rs
beam-stream/tests/: verify_schema.rs
beam-tasks/: Cargo.toml  Dockerfile  README.md
beam-web/: .cta.json  .env.example  .eslintrc.cjs  .gitignore  BUILD.bazel  Containerfile  README.md  biome.jsonc  bun.lockb  codegen.ts  index.html  package.json  pnpm-lock.yaml  tailwind.config.mjs  tsconfig.app.json  tsconfig.json  vite.config.ts  vitest.config.ts
beam-web/src/: env.ts  index.css  main.tsx  routeTree.gen.ts
beam-web/src/components/: 404.tsx  Header.tsx  RouteError.tsx  footer.tsx  header.tsx  mode-toggle.tsx  searchbar.tsx
beam-web/src/hooks/: auth.test.tsx  auth.tsx
beam-web/src/layouts/: Layout.astro
beam-web/src/lib/: apiClient.test.ts
beam-web/src/pages/: index.astro
beam-web/src/routes/: __root.tsx  about.lazy.tsx  admin.tsx  browse.lazy.tsx  explore.tsx  index.lazy.tsx  index.tsx  libraries.$id.tsx  libraries.tsx  login.lazy.tsx  login.test.tsx  login.tsx  media.$id.tsx  profile.lazy.tsx  profile.tsx  register.tsx  settings.tsx  signup.lazy.tsx  watch.lazy.tsx
beam-web/src/test/: handlers.ts  setup.ts
migration/: Cargo.toml  README.md
migration/src/: lib.rs  m20260126_000001_create_libraries.rs  m20260126_000002_create_indexed_files.rs  m20260126_000003_create_movies.rs  m20260126_000004_create_shows.rs  m20260126_000005_create_stream_cache.rs  m20260209_000001_create_schema.rs  m20260210_000001_create_users.rs  m20260212_000001_ensure_cascade.rs
old-api/beam-auth/: bun.lockb  drizzle.config.ts
old-api/beam-index/: .dockerignore  README.md  build.rs
old-api/beam-index/src/: client.rs  main.rs
old-api/beam-index/src/io/: mod.rs  (+1 more)
old-api/beam-stream/: .gitignore  Cargo.toml  Dockerfile  README.md
old-api/beam-stream/src/: config.rs  docs.rs  metrics.rs
old-api/beam-tasks/src/: main.rs
(+9 files in other folders)
