[workspace]
members = ["beam-stream", "migration"]
resolver = "3"

[workspace.dependencies]
async-trait = "0.1"
salvo = { version = "0.77", features = [
    "oapi",
    "cors",
    "serve-static",
    "affix-state",
] }
chrono = "0.4"
confique = "0.4.0"
ffmpeg-next = "8.0.0"
log = "0.4.28"
regex = "1.12.3"
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "postgres-array",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.17"
tokio = { version = "1.48.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.18", features = ["v4", "serde"] }
walkdir = "2.5.0"
jsonwebtoken = "10.3.0"
argon2 = { version = "0.5.3", features = ["std"] }
redis = { version = "1.0.3", features = ["tokio-comp"] }
bb8-redis = "0.26.0"
rand = "0.10.0"

[profile.release]
codegen-units = 1
lto = "thin"
# panic = "abort"
# strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
