[workspace]
members = ["beam-auth", "beam-domain", "beam-index", "beam-stream", "beam-migration", "beam-entity"]
resolver = "3"

[workspace.dependencies]
# http 1.3.x has a corrupted publish that fails to compile; pin to >=1.4
http = ">=1.4, <2"
argon2 = { version = "0.5.3", features = ["std"] }
sha2 = "0.10"
async-trait = "0.1"
bb8-redis = "0.26.0"
chrono = "0.4.43"
confique = "0.4.0"
ffmpeg-next = "8.0.0"
jsonwebtoken = {version = "10.3.0", features = ["aws_lc_rs"] }
rand = "0.10.0"
redis = { version = "1.0.3", features = ["tokio-comp"] }
regex = "1.12.3"
salvo = { version = "0.89.1", features = [
    "oapi",
    "cors",
    "serve-static",
    "affix-state",
    "websocket",
] }
sea-orm = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
    "macros",
    "with-uuid",
    "with-chrono",
    "with-json",
    "postgres-array",
] }
sea-orm-migration = { version = "1.1", features = [
    "sqlx-postgres",
    "runtime-tokio-rustls",
] }
serde = "1.0.228"
serde_json = "1.0.149"
thiserror = "2.0.18"
tokio = { version = "1.49.0", features = ["full"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.20"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
walkdir = "2.5.0"
tonic = { version = "0.12", features = ["transport"] }
prost = "0.13"
tonic-build = "0.12"

[profile.release]
codegen-units = 1
lto = "thin"
# panic = "abort"
# strip = true

[profile.release-with-debug]
inherits = "release"
debug = true
