"""Beam monorepo — Bzlmod module definition."""

module(
    name = "beam",
    version = "0.0.1",
)

# ── Core ──────────────────────────────────────────────────────────────────────

bazel_dep(name = "bazel_skylib", version = "1.9.0")
bazel_dep(name = "platforms", version = "1.0.0")

# ── Rust ──────────────────────────────────────────────────────────────────────

bazel_dep(name = "rules_rust", version = "0.69.0")

rust = use_extension("@rules_rust//rust:extensions.bzl", "rust")
rust.toolchain(
    edition = "2024",
    extra_exec_rustc_flags = [
        "-Clink-arg=-L/var/home/justin13888/.local/lib",
    ],
    # Fedora ships libstdc++.so.6 in /usr/lib64 but the unversioned linker stub
    # (libstdc++.so) requires libstdc++-devel. Pass a local symlink directory
    # to both target and exec (bootstrap) Rust compilations so the linker can
    # find libstdc++ without that package.
    # Prerequisite: mkdir -p ~/.local/lib && ln -sf /usr/lib64/libstdc++.so.6 ~/.local/lib/libstdc++.so
    extra_rustc_flags = [
        "-Clink-arg=-L/var/home/justin13888/.local/lib",
    ],
    versions = ["1.91.0"],
)
use_repo(rust, "rust_toolchains")

register_toolchains("@rust_toolchains//:all")

# ── Rust external crates (from Cargo.lock) ───────────────────────────────────

crate = use_extension("@rules_rust//crate_universe:extensions.bzl", "crate")
crate.from_cargo(
    name = "crates",
    cargo_lockfile = "//:Cargo.lock",
    manifests = [
        "//:Cargo.toml",
        "//beam-auth:Cargo.toml",
        "//beam-domain:Cargo.toml",
        "//beam-entity:Cargo.toml",
        "//beam-index:Cargo.toml",
        "//beam-migration:Cargo.toml",
        "//beam-stream:Cargo.toml",
    ],
)

# ffmpeg-sys-next has a build script that runs bindgen against FFmpeg headers.
# For linking, wire up the hermetically-built //third_party/ffmpeg:ffmpeg.
# For header discovery (bindgen), the build script falls back to PKG_CONFIG_PATH
# or FFMPEG_DIR from the host environment (propagated via .bazelrc --action_env).
crate.annotation(
    # @@// is the canonical label prefix for the root module.
    # Using // alone inside an external crate's generated BUILD resolves relative
    # to that crate's repo, so we must use the canonical root-module prefix.
    build_script_link_deps = ["@@//third_party/ffmpeg:ffmpeg"],
    crate = "ffmpeg-sys-next",
)
use_repo(crate, "crates")

# ── Protobuf / gRPC toolchain ─────────────────────────────────────────────────

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "toolchains_protoc", version = "0.6.1")

protoc = use_extension("@toolchains_protoc//protoc:extensions.bzl", "protoc")
protoc.toolchain(
    version = "v29.3",
)

# toolchains_protoc_hub — toolchain registrations hub.
# The platform-specific repos expose the raw `bin/protoc` binary so that
# cargo_build_script targets (e.g. beam-index tonic codegen) can reference
# protoc directly without going through the proto_toolchain mechanism.
use_repo(
    protoc,
    "toolchains_protoc_hub",
    "toolchains_protoc_hub.linux_aarch_64",
    "toolchains_protoc_hub.linux_ppcle_64",
    "toolchains_protoc_hub.linux_s390_64",
    "toolchains_protoc_hub.linux_x86_64",
    "toolchains_protoc_hub.osx_aarch_64",
    "toolchains_protoc_hub.osx_x86_64",
    "toolchains_protoc_hub.win64",
)

register_toolchains("@toolchains_protoc_hub//:all")

# ── C/C++ foreign build rules (for FFmpeg) ────────────────────────────────────

bazel_dep(name = "rules_foreign_cc", version = "0.15.1")

# Download FFmpeg 8.0 source.
http_archive = use_repo_rule("@bazel_tools//tools/build_defs/repo:http.bzl", "http_archive")

http_archive(
    name = "ffmpeg_8_0_src",
    build_file_content = """\
filegroup(
    name = "all",
    srcs = glob(["**"]),
    visibility = ["//visibility:public"],
)
""",
    sha256 = "b2751fccb6cc4c77708113cd78b561059b6fa904b24162fa0be2d60273d27b8e",
    strip_prefix = "ffmpeg-8.0",
    urls = ["https://ffmpeg.org/releases/ffmpeg-8.0.tar.xz"],
)

# ── Build / lint tooling ──────────────────────────────────────────────────────

bazel_dep(name = "buildifier_prebuilt", version = "8.2.1.2")
