[package]
name = "beam-domain"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[dependencies]
async-trait = { workspace = true }
chrono = { workspace = true }
ffmpeg-next = { workspace = true }
num = { version = "0.4.3", features = ["serde"] }
parking_lot = "0.12.5"
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dependencies.beam-entity]
path = "../beam-entity"
optional = true

[dependencies.mockall]
version = "0.14.0"
optional = true

[features]
entity = ["dep:beam-entity"]
test-utils = ["dep:mockall"]
