[package]
name = "beam-index"
version = "0.1.0"
edition = "2021"
# TODO: Fill this out
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
blake3 = { version = "1.5.1", features = ["rayon", "digest", "prefer_intrinsics"] }
color-eyre = "0.6.3"
dotenvy = "0.15.7"
envy = "0.4.2"
futures = "0.3.30"
listenfd = "1.0.1"
memmap2 = "0.9.4"
prost = "0.12.4"
serde = { version = "1.0.198", features = ["derive"] }
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tokio-stream = { version = "0.1.15", features = ["full"] }
tokio-util = "0.7.10"
tonic = "0.11.0"
tonic-health = "0.11.0"
tonic-types = "0.11.0"
tracing = { version = "0.1.40", features = ["async-await"] }
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "fmt", "json", "local-time"] }
url = { version = "2.5.0", features = ["serde"] }
walkdir = "2.5.0"

[build-dependencies]
tonic-build = "0.11.0"
