[package]
name = "beam-stream"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false

[dependencies]
async-graphql = { version = "7.0.17", features = [
    "apollo_persisted_queries",
    "chrono",
    "dataloader",
    "decimal",
    "log",
    "opentelemetry",
    "secrecy",
    "unblock",
    "uuid",
    "url",
] }
salvo = { workspace = true }
bytes = "1"
http = "1"
chrono = { workspace = true, features = ["serde"] }
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
ffmpeg-next = { workspace = true }
fs2 = "0.4.3"
hex = { version = "0.4.3", features = ["serde"] }

log = { workspace = true, features = ["serde", "release_max_level_debug"] }
m3u8-rs = "6.0.0"
num = { version = "0.4.3", features = ["serde"] }
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rayon = "1.11.0"
rust_decimal = "1.39.0"
serde = { workspace = true, features = ["derive"] }
tempfile = "3.23.0"
thiserror = { workspace = true }
tokio = { workspace = true }

tracing = { workspace = true, features = ["log", "release_max_level_debug"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }

uuid = { workspace = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
sea-orm = { workspace = true }
async-trait = { workspace = true }
serde_json = { workspace = true }
walkdir = { workspace = true }
regex = { workspace = true }
jsonwebtoken = { workspace = true }
argon2 = { workspace = true }
redis = { workspace = true }
bb8-redis = { workspace = true }
rand = { workspace = true }
base64 = "0.22.1"

[dev-dependencies]
futures = "0.3.31"
migration = { path = "../migration" }
mockall = "0.14.0"
