[package]
name = "beam-stream"
version = "0.1.0"
edition = "2024"
license = "AGPL-3.0-only"
publish = false
default-run = "beam-stream"

[dependencies]
argon2 = { workspace = true }
async-graphql = { version = "7.0.17", features = [
    "apollo_persisted_queries",
    "chrono",
    "dataloader",
    "decimal",
    "log",
    "opentelemetry",
    "secrecy",
    "unblock",
    "uuid",
    "url",
] }
async-trait = { workspace = true }
base64 = "0.22.1"
bb8-redis = { workspace = true }
bytes = "1"
chrono = { workspace = true, features = ["serde"] }
color-eyre = "0.6.5"
confique = { workspace = true }
dotenvy = "0.15.7"
eyre = "0.6.12"
ffmpeg-next = { workspace = true }
fs2 = "0.4.3"
hex = { version = "0.4.3", features = ["serde"] }
http = "1"
jsonwebtoken = { workspace = true }
m3u8-rs = "6.0.0"
num = { version = "0.4.3", features = ["serde"] }
num_cpus = "1.17.0"
parking_lot = "0.12.5"
rand = { workspace = true }
rayon = "1.11.0"
redis = { workspace = true }
regex = { workspace = true }
rust_decimal = "1.39.0"
salvo = { workspace = true }
sea-orm = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
tempfile = "3.23.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true, features = ["log", "release_max_level_debug"] }
tracing-subscriber = { workspace = true, features = ["json", "env-filter"] }
uuid = { workspace = true }
walkdir = { workspace = true }
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }

[dev-dependencies]
futures = "0.3.31"
migration = { path = "../migration" }
mockall = "0.14.0"
